--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
       <section>
         <div id="title">
-          <h1>Test-github-project-page</h1>
+          <h1>Hello WORLD!</h1>
+          <h1>Go to <a href="testnim.html">my first html test page</a></h1>
+          <p>Everything in this page apart from the 2 previous lines was automatically generated with the 
+            <a href="https://help.github.com/articles/creating-pages-with-the-automatic-generator">automatic generator</a>
+          </p>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/nimiq">nimiq</a></span>
@@ -40,9 +44,6 @@
 
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>Hello WORLD!</p>
-<p>Go to <a href="testnim.html">my first html test page</a></p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
