--- a/testnim.html
+++ b/testnim.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Test hello world nim!</h1>
-<p>bye bye</p>
+<p>This is a naked page created from scratch by myself in order to show that we can write any staic page with no limitations</p>
 
 </body>
 </html>
